HW06 1.1-1.2 tasks